# Resizer

./: .gitignore  README.md
resize-core/: Cargo.toml
resize-core/src/: lib.rs
resizer-js/: index.html  package.json  vite.config.js
resizer-js/src/: App.jsx  main.jsx
resizer-js/src/css/: index.css  main.css  package.css
resizer-js/src/main/: Main.jsx
