[package]
name = "resizer-core"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.25.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
panic = "abort"
codegen-units = 1
lto = true
strip = true
